--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "gulp-typescript": "^5.0.1",
+    "lodash": "^4.17.15",
     "morgan": "^1.6.1",
     "request": "^2.88.0"
   },
