--- a/package.json
+++ b/package.json
@@ -5,10 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node bin/www.js",
-    "test": "mocha --recursive tests",
-    "test:coverage": "nyc npm tests",
-    "test:unit": "mocha --recursive tests/routes",
-    "test:integration": "mocha --recursive tests/integration"
+    "test": "mocha --recursive test",
+    "test:coverage": "nyc npm test"
   },
   "dependencies": {
     "cookie-parser": "^1.3.3",
