--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
   "name": "gitea-drone",
   "version": "0.0.1",
   "private": true,
-  "main": "app.js",
+  "main": "src/app/app.js",
   "scripts": {
-    "start": "node bin/www.js",
-    "test": "mocha --recursive test",
-    "test:coverage": "nyc npm test"
+    "start": "node src/app/bin/www.js",
+    "test": "mocha --recursive src/test",
+    "test:coverage": "nyc npm src/test"
   },
   "dependencies": {
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
-    "gulp-typescript": "^5.0.1",
     "lodash": "^4.17.15",
     "morgan": "^1.6.1",
     "request": "^2.88.0"
@@ -24,6 +23,7 @@
     "gulp-livereload": "^4.0.2",
     "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
+    "gulp-typescript": "^5.0.1",
     "mocha": "^6.2.1",
     "nyc": "^14.1.1",
     "supertest": "^4.0.2",
