--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:coverage": "nyc npm src/test"
   },
   "dependencies": {
+    "@overnightjs/core": "^1.6.9",
     "cookie-parser": "^1.3.3",
     "express": "^4.13.3",
     "lodash": "^4.17.15",
@@ -18,6 +19,10 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.1",
+    "@types/mocha": "^5.2.7",
+    "@types/morgan": "^1.7.37",
+    "@types/request": "^2.48.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "debug": "^4.1.1",
@@ -29,6 +34,7 @@
     "mocha": "^6.2.2",
     "nyc": "^14.1.1",
     "supertest": "^4.0.2",
+    "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.6.4"
