--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,12 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
-            "program": "${workspaceFolder}/src/app/bin/www.ts",
-            "env": {
-                "DRONE_URL": "https://ci.genis.slavoo.local",
-                "DRONE_TOKEN": "C9isOU5zIj0WlRGDNxHaeGmFuGPDkbew",
-                "NODE_EXTRA_CA_CERTS": "../ca-certificates.crt"
-            },
+            "program": "${workspaceFolder}/src/app/bin/gitea-drone.ts",
             "runtimeArgs": [
                 "-r",
                 "ts-node/register"
