--- a/package.json
+++ b/package.json
@@ -2,13 +2,46 @@
   "name": "gitea-drone",
   "version": "0.0.1",
   "private": true,
-  "main": "src/app/app.js",
+  "main": "src/app/bin/gitea-drone.ts",
   "scripts": {
-    "start": "node src/app/bin/www.js",
+    "start": "node dist/bin/gitea-drone.js",
     "build:prod": "tsc --sourceMap false",
     "develop": "nodemon",
-    "test": "mocha --exit",
-    "test:coverage": "nyc mocha --recursive src/test --exit"
+    "clean": "rm -rf dist",
+    "test": "mocha",
+    "test:coverage": "nyc mocha"
+  },
+  "nodemonConfig": {
+    "watch": [
+      "src/app"
+    ],
+    "ext": "ts",
+    "ignore": [
+      "src/**/*.spec.ts"
+    ],
+    "exec": "ts-node ./src/app/bin/gitea-drone.ts"
+  },
+  "mocha": {
+    "extension": [
+      "ts"
+    ],
+    "spec": "src/**/*.spec.ts",
+    "require": "ts-node/register",
+    "exit": true
+  },
+  "nyc": {
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "include": [
+      "src/app"
+    ],
+    "exclude": [
+      "src/app/bin"
+    ],
+    "all": true,
+    "reporter": [
+      "text",
+      "lcov"
+    ]
   },
   "dependencies": {
     "@overnightjs/core": "^1.6.9",
@@ -18,31 +51,20 @@
     "request": "^2.88.0"
   },
   "devDependencies": {
+    "@istanbuljs/nyc-config-typescript": "^0.1.3",
     "@types/express": "^4.17.1",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
     "@types/request": "^2.48.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
-    "debug": "^4.1.1",
-    "gulp": "^4.0.2",
-    "gulp-file-cache": "0.0.1",
-    "gulp-livereload": "^4.0.2",
-    "gulp-nodemon": "^2.0.2",
-    "gulp-typescript": "^5.0.1",
     "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
     "nyc": "^14.1.1",
     "supertest": "^4.0.2",
     "ts-node": "^8.4.1",
     "tslint": "^5.20.0",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^3.6.4"
-  },
-  "mocha": {
-    "extension": [
-      "ts"
-    ],
-    "spec": "src/**/*.spec.ts",
-    "require": "ts-node/register"
   }
 }
