renamed the url

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
     "mocha.requires": [
         "ts-node/register"
     ],
+    "mocha.options": {
+        "exit": true
+    },
     "editor.tabSize": 2,
     "files.insertFinalNewline": true,
     "files.exclude": {
