--- a/.ci.yaml
+++ b/.ci.yaml
@@ -4,6 +4,8 @@ meta:
 build:
   image: node:10.13-alpine
   script: compile_and_test.sh
+helm:
+  path: helm
 test:
   image: node:10.13-alpine
   script: run_acceptance_tests.sh
